# OxideSlabs

./: .gitignore  MLtraining.ipynb  README.md  fdfcreate.ipynb  findinggroundstate.ipynb  main.ipynb  md_analysis.ipynb  pull.sh  pyproject.toml  run.sh  submit.sh  submit2.sh
ROTC_structures/: mp-5020_BaTiO3.cif  mp-5777_BaTiO3.cif  mp-5986_BaTiO3.cif
codes/: bandstructure.py  cleanfiles.py  structureoptimizer.py
examples/: nep.txt
gpaw_data/: BaTiO3.xyz  __init__.py
pseudos/: Ti.psf  ref.txt
pseudos/2/: Ti.psf
pseudos/4/: Ti.psf
pseudos/PBEsol/: Ba.psml  Sr.psml  Ti.psml
scripts/: ML_desc.py  ML_dft.py  ML_md.py  ML_train.py  atomic.py  bands.py  basis.py  frozen.py  gpaw.py  gpawtest.py  grid.py  load.py  numba.py  numba_test.py  phonons.py  relax.py  rungpaw.py  sed.py  spacegroups.py  study.py  test.py  trainML.py
slurm/: A100.sh  GPAW.sh  GPU.sh  H200.sh  NUMBA.sh  README.md  SIESTA.sh  run.sh  run2.sh  sbsubmit  submit
src/: MaxVol.py  activeNEP.py  asiIO.py  bandscalc.py  bulkBS.py  bulkPH.py  calculators.py  cleanfiles.py  fdfcreate.py  frozenphonon.py  gpumdIO.py  latexfig.py  parameterconv.py  phononASE.py  phononcalc.py  phonons.py  plotsettings.py  structure.py  structureoptimizer.py  utils.py
tools/: README.md  push.sh
