[project]
name = "oxideslabs"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ase>=3.26.0",
    "calorine>=3.3",
    "dynasor>=2.3",
    "hiphive>=1.5",
    "nbformat>=5.10.4",
    "phonopy>=2.45.1",
    "sisl[viz]>=0.16.2",
]
